protect against the to-be-focused content going away during tabbing (bug 171210). r=jkeiser, sr=jst, a=asa.